adds final images

--- a/includes/content.html
+++ b/includes/content.html
@@ -4,6 +4,12 @@
 <p>Look!  There's a cute kitten picture in here!</p>
 <img src="images/rabbit.jpg" id="rabbit" align="right" />
 <img src="images/velociraptor.jpg" id="velociraptor" align="right" />
+<img src="images/velociraptor.jpg" id="velociraptor" align="right" />
+<img src="images/fish.jpeg" id="fish" align="right" />
+<img src="images/snake.jpg" id="snake" align="right" />
+<img src="images/hermitcrab.jpg" id="hermitcrab" align="right" />
+<img src="images/bear.jpg" id="bear" align="right" />
+<img src="images/bermese.jpg" id="dog" align="right" />
 </div>
 <div id="div2">
 <p>Here is content in a file named <b>content1.php</b> and in a div with an id of <b>div2</b></p>
