--- a/includes/content.html
+++ b/includes/content.html
@@ -10,6 +10,7 @@
 <img src="images/hermitcrab.jpg" id="hermitcrab" align="right" />
 <img src="images/bear.jpg" id="bear" align="right" />
 <img src="images/bermese.jpg" id="dog" align="right" />
+<img src="images/ferret.jpeg" id="ferret" align="right" />
 </div>
 <div id="div2">
 <p>Here is content in a file named <b>content1.php</b> and in a div with an id of <b>div2</b></p>
